[gd_scene load_steps=3 format=3 uid="uid://dod8k7apd4f3"]

[ext_resource type="Script" path="res://widgets/selection_carusel/label_selection_carusel.gd" id="1_ek2ds"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mlgd"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="SelectionCarusel" type="Control"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
script = ExtResource("1_ek2ds")

[node name="BackgroundPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 150)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 25.0
offset_right = 150.0
offset_bottom = 175.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="BackgroundPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Sets"

[node name="PanelContainer" type="PanelContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1mlgd")

[node name="MarginContainer" type="MarginContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="ObjectContainer" type="HBoxContainer" parent="BackgroundPanel/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 35

[node name="SelectionMarker" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -0.5
offset_right = 0.5
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SelectionMarker"]
layout_mode = 0
offset_right = 1.0
offset_bottom = 1.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="scroll_ended" from="BackgroundPanel/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer" to="." method="_on_scroll_container_scroll_ended"]
